# voice2text

./: CLAUDE.md  main.py  pyproject.toml  voice2text.spec
