[project]
name = "voice2text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy>=2.4.6",
    "pynput>=1.8.2",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
